fix link button styles to make legible (#3938) [MER-2342]
adjust activity preview page style

--- a/assets/styles/common/elements.scss
+++ b/assets/styles/common/elements.scss
@@ -51,7 +51,7 @@ $element-margin-bottom: 1.5em;
     margin-bottom: $element-margin-bottom;
   }
 
-  a,
+  a:not(.btn),
   a.btn.btn-link {
     color: var(--color-delivery-primary);
 
